# rightscrape

./: Cargo.toml  README.md  input.tsv
src/: main.rs
