[package]
name = "rightscrape"
version = "0.2.0"
authors = ["blakehawkins"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Read rightmove searh URLs from stdin, emit rightmove result URLs"
homepage = "https://github.com/blakehawkins/rightscrape"
repository = "https://github.com/blakehawkins/rightscrape"
readme = "README.md"

[dependencies]
oops = "0.1.0"
select = "0.4.3"
stdinix = "0.1.0"
ureq = "0.11.3"
