[package]
name = "rightscrape"
version = "0.2.0"
authors = ["blakehawkins"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Read rightmove searh URLs from stdin, emit rightmove result URLs"
homepage = "https://github.com/blakehawkins/rightscrape"
repository = "https://github.com/blakehawkins/rightscrape"
readme = "README.md"

[dependencies]
oops = "0.2"
select = "0.6"
stdinix = "0.1"
ureq = "2.8"
